force-app/main/default/objects/TNCarType__c/TNCarType__c.object-meta.xml
<CustomObject>
    <label>TNCarType</label>
    <nameField>
        <displayFormat>TNCT-{000000}</displayFormat>
        <label>TNCarType Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TNCarTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>