force-app/main/default/objects/TNCarType__c/fields/TNBodyStyle__c.field-meta.xml
<CustomField>
    <fullName>TNBodyStyle__c</fullName>
    <label>TN Body Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Convertible</fullName>
            </value>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Wagon</fullName>
            </value>
            <value>
                <fullName>Van/Minivan</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>