force-app/main/default/objects/TNCarType__c/fields/TNCarBrand__c.field-meta.xml
<CustomField>
    <fullName>TNCarBrand__c</fullName>
    <label>TN Car Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acura</fullName>
            </value>
            <value>
                <fullName>Alfa Romeo</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Bentley</fullName>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>Jaguar</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Land Rover</fullName>
            </value>
            <value>
                <fullName>Lexus</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Lotus</fullName>
            </value>
            <value>
                <fullName>Maserati</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>Mercury</fullName>
            </value>
            <value>
                <fullName>Mini</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>