force-app/main/default/objects/TNCarType__c/fields/TNModel__c.field-meta.xml
<CustomField>
    <fullName>TNModel__c</fullName>
    <label>TNModel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>