force-app/main/default/objects/TNCarType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TnCardBrand__c</columns>
    <columns>TNModel__c</columns>
    <columns>TNBodyStyle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>